--- a/src/app/createform/createform.component.html
+++ b/src/app/createform/createform.component.html
@@ -1,17 +1,20 @@
+<div class="wrapper">
 <div class="container">
-  <form [formGroup]="submittedForm" (ngSubmit)="onSubmit(submittedForm)">
-    <span>Username: </span><input type="text" formControlName="username" />
-    <span>Password: </span><input type="text" formControlName="password" />
-    <span>Retype Password: </span><input type="text" formControlName="confirmPassword" />
+    <h1>Create New Sign In</h1>
 
-    <button [disabled]="!submittedForm.valid && !isPasswordConfirm" class="btn btn-primary" type="submit">Confirm Registration</button>
+    <form class="form" [formGroup]="submittedForm" (ngSubmit)="onSubmit(submittedForm)">
+        <input type="text" formControlName="username" placeholder="New Username" />
+        <input type="password" formControlName="password" placeholder="New Password" />
+        <input type="password" formControlName="confirmPassword" placeholder="Confirm New Password" />
+
+    <button [disabled]="!enableOnRetypedPass" class="btn btn-primary" type="submit" id="login-button"><b>Complete Registration</b></button>
     {{ dummyConfirmationMessage }}
   </form>
   <!-- <h2>For testing only:</h2> -->
 
   <!-- <button class="btn btn-primary" (click)="gotoLogin()">Old User? Sign In</button> -->
+  </div>
 </div>
-
 
 
 
